--- a/themes/package.json
+++ b/themes/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "scripts": {
     "lint": "stylelint \"**/*.scss\"",
-    "style": "sass martin/scss/style.scss martin/css/style.css --no-source-map",
-    "style-min": "sass martin/scss/style.scss martin/css/style.min.css --no-source-map --style compressed"
+    "style": "npm run style-light && npm run style-dark",
+    "style-min": "npm run style-light-min && npm run style-dark-min",
+    "style-dark": "sass martin/scss/style-dark.scss martin/css/style-dark.css --no-source-map",
+    "style-dark-min": "sass martin/scss/style-dark.scss martin/css/style-dark.min.css --no-source-map --style compressed",
+    "style-light": "sass martin/scss/style.scss martin/css/style.css --no-source-map",
+    "style-light-min": "sass martin/scss/style.scss martin/css/style.min.css --no-source-map --style compressed"
   },
   "devDependencies": {
     "clean-css": "^4.2.1",
